syntax = "proto3";

package cdn.cloud_api.proto.saltapi;

import "cdn/cloud_api/proto/model/origins.proto";
import "cdn/cloud_api/proto/model/resource.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/saltapi";

message DumpRequest {
    uint32 page_size = 100; // can be zero, then the default size is used
    optional uint32 page_token = 101; // if this is nil, pagination is disabled
}

message DumpResponse {
    repeated model.Resource resources = 1;
    repeated model.OriginsGroup origins_groups = 2;
    repeated model.ResourceRule rules = 3;

    uint32 next_page_token = 100;
}


